--- a/demo/1.image.html
+++ b/demo/1.image.html
@@ -40,7 +40,7 @@
     })
 
     copyImage1.addEventListener("click", () => {
-      const img = document.getElementById("img");
+      // const img = document.getElementById("img");
       copyImage(img);
     })
 
@@ -53,7 +53,7 @@
       ctx.drawImage(img, 0, 0, img.width, img.height)
       canvas.toBlob((blob) => {
         // 目前图片只支持 png 类型
-        const clipboardItem = new ClipboardItem({ 'image/jpg': blob })
+        const clipboardItem = new ClipboardItem({ 'image/png': blob })
         navigator.clipboard.write([clipboardItem])
         console.log('复制成功');
       })
