--- a/demo/2.html
+++ b/demo/2.html
@@ -25,6 +25,11 @@
   <div hidden>hello world1</div>
   <div>hello world</div> -->
   <div class="box"></div>
+  <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus, odit facilis odio consectetur fugit provident distinctio, vero excepturi quasi saepe ipsam libero nobis, quisquam aliquid fugiat architecto tempore expedita dolore.</li>
+  <li>Placeat illo vel sit quasi voluptatem eaque error repudiandae officia quisquam similique impedit in, ipsam ipsum illum consequatur a cupiditate doloribus pariatur fuga maxime ullam. Ipsa possimus dolor ab consequuntur.</li>
+  <li>Repudiandae illum laborum quasi aperiam maxime dicta suscipit itaque tenetur quaerat enim nam quas laboriosam repellat temporibus fuga, ducimus labore doloribus saepe. Nam quasi provident dolorum voluptate, obcaecati odit esse?</li>
+  <li>Voluptatibus atque dolore reiciendis dicta debitis, in ex fuga pariatur doloribus placeat earum accusantium ipsam, voluptatem quo vel reprehenderit. Beatae necessitatibus praesentium ipsum incidunt exercitationem! Neque a unde vitae aut.</li>
+  <li>Repellat cupiditate blanditiis ea odio animi, vitae recusandae dignissimos consequatur illum nostrum culpa doloribus id. Alias voluptas voluptatibus ipsa laborum est, inventore suscipit officia modi, quod eveniet in facilis quia.</li>
 
   <input list="fruits" name="fruit" />
   <datalist id="fruits">
