--- a/demo/canvas.html
+++ b/demo/canvas.html
@@ -22,15 +22,15 @@
       ctx.fillStyle = 'rgba(0, 0, 0, 0.05)';
       ctx.fillRect(0, 0, canvas.width, canvas.height);
       console.log('canvas.width, canvas.height: ', canvas.width, canvas.height);
-      // ctx.fillStyle = '#0f0';
-      // arr.forEach((item, index) => {
-      //   ctx.fillText(str[Math.floor(Math.random() * str.length)], index * 10, item + 10);
-      //   arr[index] = item >= canvas.height || item > 10000 * Math.random() ? 0 : item + 10;
-      // })
+      ctx.fillStyle = '#0f0';
+      arr.forEach((item, index) => {
+        ctx.fillText(str[Math.floor(Math.random() * str.length)], index * 10, item + 10);
+        arr[index] = item >= canvas.height || item > 10000 * Math.random() ? 0 : item + 10;
+      })
     }
 
-    // setInterval(rain, 40);
-    // rain()
+    setInterval(rain, 40);
+    rain()
   </script>
 </body>
 </html>
