--- a/src/public/520.html
+++ b/src/public/520.html
@@ -87,7 +87,7 @@
     <div class="container">
       <div class="heart">❤️</div>
       <div class="message">
-        <p>在数不尽的星辰中</p>
+        <p>陈未明，在数不尽的星辰中</p>
         <p>你是我唯一追寻的光</p>
         <p>520 • 爱你每一天</p>
       </div>
