--- a/demo/右键菜单.html
+++ b/demo/右键菜单.html
@@ -4,49 +4,71 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <style>
-    #customContextMenu {
-      display: none;
-      position: absolute;
-      background: white;
-      border: 1px solid #ccc;
-      box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
-      z-index: 1000;
-    }
-    #customContextMenu ul {
-      list-style: none;
-      margin: 0;
-      padding: 0;
-    }
-    #customContextMenu li {
-      padding: 8px 15px;
-      cursor: pointer;
-    }
-    #customContextMenu li:hover {
-      background: #f0f0f0;
-    }
-    </style>
 </head>
 <body>
-    <div id="customContextMenu">
-      <ul>
-        <li onclick="alert('选项1被点击')">选项1</li>
-        <li onclick="alert('选项2被点击')">选项2</li>
-        <li onclick="alert('选项3被点击')">选项3</li>
-      </ul>
-    </div>
+    <custom-menu></custom-menu>
     <script>
-      document.addEventListener('contextmenu', function (e) {
-        e.preventDefault()
-        const menu = document.getElementById('customContextMenu')
-        menu.style.display = 'block'
-        menu.style.left = e.clientX + 'px'
-        menu.style.top = e.clientX + 'px'
-      })
+      class CustomMenu extends HTMLElement {
+        constructor() {
+          super()
+          this.attachShadow({ mode: 'open' });
+          this.createCSS();
+          this.createHTML();
+          document.addEventListener('contextmenu', e => {
+            e.preventDefault()
+            this.container.style.display = 'block';
+            this.container.style.left = `${e.pageX}px`;
+            this.container.style.top = `${e.pageY}px`;
+          })
 
-      document.addEventListener('click', function () {
-        document.getElementById('customContextMenu').style.display = 'none'
-      })
+          document.addEventListener('click', e => {
+            this.container.style.display = 'none';
+          })
+        }
+        createHTML() {
+          const container = document.createElement('div');
+          container.id = 'customContextMenu';
+          container.innerHTML =  `
+                <ul>
+                  <li onclick="alert('选项1被点击')">选项1</li>
+                  <li onclick="alert('选项2被点击')">选项2</li>
+                  <li onclick="alert('选项3被点击')">选项3</li>
+                </ul>
+            `
+          this.container = container;
+          this.shadowRoot.appendChild(container);
+        }
+        createCSS() {
+          const style = document.createElement('style');
+          const bg = '#f0f0f0';
+          style.textContent =  `
+              #customContextMenu {
+                --li-bg: ${bg};
+                display: none;
+                position: absolute;
+                background: white;
+                border: 1px solid #ccc;
+                box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+                z-index: 100;
+              }
+              #customContextMenu ul {
+                list-style: none;
+                margin: 0;
+                padding: 0;
+              }
+              #customContextMenu li {
+                padding: 8px 15px;
+                cursor: pointer;
+              }
+              #customContextMenu li:hover {
+                background: var(--li-bg);
+              }
+            `;
+          this.shadowRoot.appendChild(style)
+        }
+      }
+
+      customElements.define('custom-menu', CustomMenu);
     </script>
 </body>
 </html>
