--- a/src/public/birthday/html/BirthdayCake.html
+++ b/src/public/birthday/html/BirthdayCake.html
@@ -181,21 +181,11 @@
     <img src="../img/HappyBirthday.png">
   </div>
   <div class="button-style1">
-    <a href="Memories.html" class="lk1">
-      <div class="link1">
-        <div class="bt1">
-			<a href="./EasterEgg.html">喜欢</a>
-        </div>
-      </div>
-    </a>
+      <a class="link1" href="./EasterEgg.html">喜欢💗</a>
   </div>
   <div class="button-style2">
-    <a class="lk2">
-      <div class="link2">
-        <div class="bt1">
-          我不喜欢
-        </div>
-      </div>
+    <a class="link2">
+      我不喜欢
     </a>
   </div>
   <ul class="bg-bubbles">
