--- a/src/public/birthday/html/login.html
+++ b/src/public/birthday/html/login.html
@@ -15,7 +15,7 @@
 			<div class="container">
 				<h1>生日快乐</h1>
 				<form class="form">
-					<input id="userName" name="userName" type="text" placeholder="0000" value="我的xxx">
+					<input id="userName" name="userName" type="text" placeholder="名字" value="小明">
 					<input id="pwd" name="pwd" type="password" placeholder="密码">
 					<button type="submit" id="login-button">进入</button>
 				</form>
